@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T00:38:45Z",
+  "timestamp" : "2024-01-08T16:10:10Z",
   "count_outdated" : 471,
   "uniques_outdated" : 301,
-  "count" : 476,
-  "uniques" : 305,
+  "count" : 477,
+  "uniques" : 306,
   "clones" : [
     {
       "timestamp": "2024-01-01T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
