@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 6,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-01-01T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
